# sistema_clinico

./: README.md  pyproject.toml
app/: __init__.py
app/core/: __init__.py
app/core/config/: __init__.py  settings.py
app/core/execution_time/: __init__.py
app/data/: agendas.json  enderecos.json  medicos.json  pacientes.json  pessoas.json
app/entities/: __init__.py
app/entities/agenda/: __init__.py
app/entities/database/: __init__.py
app/entities/endereco/: __init__.py
app/entities/medico/: __init__.py
app/entities/paciente/: __init__.py
app/entities/pessoa/: __init__.py
app/menu/: __init__.py
app/menu/design/: __init__.py
