[tool.poetry]
name = "sistema_clinico_conectanuvem"
version = "0.1.0"
description = ""
authors = ["Natan Nascimento <natan.nascimento@xpi.com.br>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
